--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -34,4 +34,4 @@ jobs:
           dependencies.enabled: true
           licenses.copyleft.include: MIT
           dependencies.scope.include: devDependencies
-          settingsFilepath: scanoss.json
+          settingsFilepath: settings.json
