--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@feat/groh/integrate-scanoss-json
+        uses: scanoss/actions-scan@v1
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
