--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,9 +28,11 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@feat/groh/integrate-scanoss-json
+        uses: scanoss/actions-scan@bug/groh/bug-on-api-key
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
           licenses.copyleft.include: MIT
           dependencies.scope.include: devDependencies
+          apiUrl: 'https://api.scanoss.com/scan7direct'
+          apikey: 'fD4P8wbfWS9XHvsrzcDrB0zu'
