--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -32,3 +32,4 @@ jobs:
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
+          licenses.copyleft.include: MIT,ISC
