--- a/package.json
+++ b/package.json
@@ -1,87 +1,321 @@
 {
-  "name": "scanoss",
-  "version": "0.16.5",
-  "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
-  "repository": "https://github.com/scanoss/scanoss.js",
-  "license": "MIT",
-  "keywords": [],
-  "bin": {
-    "scanoss-js": "build/main/cli/bin/cli-bin.js"
+  "name": "scanoss-workbench",
+  "productName": "SCANOSS SBOM Workbench",
+  "description": "SCANOSS SBOM Workbench brings free of charge, secure and anonymous Open Source Auditing to your desktop.",
+  "homepage": "https://github.com/scanoss/sbom-workbench#readme",
+  "bugs": {
+    "url": "https://github.com/scanoss/sbom-workbench/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/scanoss/sbom-workbench/"
+  },
+  "author": {
+    "name": "SCANOSS",
+    "email": "info@scanoss.com",
+    "url": "https://www.scanoss.com/"
+  },
+  "license": "GPL-2.0-only",
+  "keywords": [
+    "scanoss",
+    "opensource"
+  ],
+  "main": "./src/main/main.ts",
   "scripts": {
-    "build": "run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
-    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts' 'src/**/*.spec.ts'",
-    "install-dev": "npm run build && npm run test && npm install -g ."
+    "prestart": "ts-node ./.erb/scripts/override.js",
+    "prebuild": "ts-node ./.erb/scripts/override.js",
+    "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
+    "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
+    "build:renderer": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.prod.ts",
+    "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts",
+    "lint": "cross-env NODE_ENV=development eslint . --ext .js,.jsx,.ts,.tsx",
+    "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
+    "prepare": "husky install",
+    "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
+    "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
+    "start:main": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only .",
+    "start:main:watch": "cross-env NODE_ENV=development electronmon -r ts-node/register/transpile-only .",
+    "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
+    "start:threads": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.threads.dev.ts",
+    "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
+    "test": "jest"
   },
-  "engines": {
-    "node": ">=10"
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "cross-env NODE_ENV=development eslint --cache"
+    ],
+    "*.json,.{eslintrc,prettierrc}": [
+      "prettier --ignore-path .eslintignore --parser json --write"
+    ],
+    "*.{css,scss}": [
+      "prettier --ignore-path .eslintignore --single-quote --write"
+    ],
+    "*.{html,md,yml}": [
+      "prettier --ignore-path .eslintignore --single-quote --write"
+    ]
+  },
+  "browserslist": [],
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 120,
+    "overrides": [
+      {
+        "files": [
+          ".prettierrc",
+          ".eslintrc"
+        ],
+        "options": {
+          "parser": "json"
+        }
+      }
+    ]
+  },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "release/app/node_modules"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "ts",
+      "tsx",
+      "json"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.erb/mocks/fileMock.js",
+      "\\.(css|less|sass|scss)$": "identity-obj-proxy",
+      "^@api(.*)$": "<rootDir>/src/api$1",
+      "^@assets(.*)$": "<rootDir>/assets$1",
+      "^@config(.*)$": "<rootDir>/src/config$1",
+      "^@context(.*)$": "<rootDir>/src/renderer/context/$1",
+      "^@components(.*)$": "<rootDir>/src/renderer/components/$1",
+      "^@hooks(.*)$": "<rootDir>/src/renderer/hooks$1",
+      "^@store(.*)$": "<rootDir>/src/renderer/store$1"
+    },
+    "setupFiles": [
+      "./.erb/scripts/check-build-exists.ts"
+    ],
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    },
+    "testPathIgnorePatterns": [
+      "release/app/dist",
+      "src/__tests__/export/ExportRepositoryMock.ts",
+      "src/__tests__/export/mocks/*"
+    ],
+    "transform": {
+      "\\.(ts|tsx|js|jsx)$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(uuid)/)"
+    ]
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.5.5",
-    "abort-controller": "^3.0.0",
+    "@base-ui-components/react": "^1.0.0-alpha.7",
+    "@electron/rebuild": "^3.7.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/lab": "^7.0.0-beta.10",
+    "@mui/material": "^7.0.1",
+    "@mui/private-theming": "^6.4.9",
+    "@mui/system": "^7.0.1",
+    "@mui/x-data-grid": "^7.28.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "adm-zip": "^0.5.9",
-    "cli-progress": "^3.9.1",
-    "commander": "^11.1.0",
-    "eventemitter3": "^4.0.7",
+    "chart.js": "^3.9.1",
+    "electron-debug": "^3.2.0",
+    "electron-log": "^4.4.7",
+    "electron-updater": "6.6.2",
+    "eslint": "^9.23.0",
     "form-data": "^4.0.0",
-    "google-protobuf": "^3.19.4",
-    "gunzip-maybe": "^1.4.2",
-    "isbinaryfile": "^4.0.8",
+    "history": "^5.0.0",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.4",
+    "i18next-resources-to-backend": "^1.0.0",
+    "is-binary-path": "^2.1.0",
+    "monaco-editor": "^0.33.0",
+    "node-blob": "^0.0.2",
     "node-fetch": "^2.6.1",
     "p-queue": "6.6.2",
     "packageurl-js": "^1.2.1",
-    "proxy-agent": "^6.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-hook-form": "^7.52.1",
+    "react-i18next": "^11.18.6",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "react-split-pane": "^0.1.92",
+    "react-syntax-highlighter": "^15.4.3",
+    "react-virtualized": "^9.22.3",
+    "react-virtualized-tree": "^3.4.1",
+    "recharts": "^2.15.3",
+    "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "^0.13.5",
+    "rimraf": "^6.0.1",
+    "scanoss": "^0.16.4",
     "sort-paths": "^1.1.1",
-    "syswide-cas": "^5.3.0",
-    "tar": "^6.1.11",
-    "tar-stream": "^2.2.0",
-    "uuid": "^9.0.0",
-    "xml-js": "^1.6.11"
+    "source-map-support": "^0.5.19",
+    "translation-check": "^1.0.2",
+    "uuid": "^8.3.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.2",
-    "@types/node-fetch": "^2.6.2",
-    "@types/node-gzip": "^1.1.0",
-    "@types/tar": "^6.1.3",
-    "@types/uuid": "^9.0.0",
-    "chai": "^4.3.6",
-    "codecov": "^3.5.0",
-    "deep-equal-in-any-order": "^2.0.1",
-    "mocha": "^10.2.0",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.5.4"
+    "@electron/notarize": "^3.0.1",
+    "@eslint/config-array": "^0.20.0",
+    "@eslint/object-schema": "^2.1.6",
+    "@grpc/grpc-js": "^1.8.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
+    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^22.14.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^16.9.3",
+    "@types/react-virtualized": "^9.21.30",
+    "@types/terser-webpack-plugin": "^5.0.4",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "browserslist-config-erb": "^0.0.3",
+    "chalk": "^4.1.2",
+    "concurrently": "^7.1.0",
+    "core-js": "^3.22.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "detect-port": "^1.3.0",
+    "electron": "^25.2.0",
+    "electron-builder": "^26.0.11",
+    "electron-devtools-installer": "^4.0.0",
+    "electronmon": "^2.0.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-erb": "^4.0.3",
+    "eslint-import-resolver-typescript": "^4.3.1",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-compat": "^4.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "file-loader": "^6.2.0",
+    "google-protobuf": "^3.21.2",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jiti": "^2.4.2",
+    "lint-staged": "^12.4.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "prettier": "^2.6.2",
+    "react-refresh": "^0.13.0",
+    "react-test-renderer": "^18.1.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-jest": "^29.3.1",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.98.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1",
+    "webpack-merge": "^5.8.0"
   },
-  "files": [
-    "build/main",
-    "build/module",
-    "!**/*.json",
-    "assets/**",
-    "!**/*.spec.*",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
-  ],
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/*.spec.ts"
+  "build": {
+    "productName": "SCANOSS SBOM Workbench",
+    "appId": "com.scanoss.workbench",
+    "artifactName": "sbom-workbench-${version}-${os}-${arch}.${ext}",
+    "copyright": "Copyright© 2020, 2023 SCANOSS.COM",
+    "asar": true,
+    "publish": null,
+    "asarUnpack": "**\\*.{node,dll}",
+    "files": [
+      "dist",
+      "node_modules",
+      "package.json"
+    ],
+    "afterSign": ".erb/scripts/notarize.js",
+    "mac": {
+      "notarize": false,
+      "target": {
+        "target": "default",
+        "arch": [
+          "arm64",
+          "x64"
+        ]
+      },
+      "type": "distribution",
+      "hardenedRuntime": true,
+      "entitlements": "assets/entitlements.mac.plist",
+      "entitlementsInherit": "assets/entitlements.mac.plist",
+      "gatekeeperAssess": false
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "win": {
+      "target": {
+        "target": "nsis",
+        "arch": [
+          "x64"
+        ]
+      }
+    },
+    "linux": {
+      "target": {
+        "target": "AppImage",
+        "arch": [
+          "x64"
+        ]
+      },
+      "category": "Development"
+    },
+    "directories": {
+      "app": "release/app",
+      "buildResources": "assets",
+      "output": "release/build"
+    },
+    "extraResources": [
+      "./assets/**"
     ]
+  },
+  "engines": {
+    "node": ">=22.12.0",
+    "npm": ">=7.x"
+  },
+  "engineStrict": true,
+  "electronmon": {
+    "patterns": [
+      "!**/**",
+      "src/main/*"
+    ],
+    "logLevel": "quiet"
   }
 }
