--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,9 +28,9 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@v1.0.2
+        uses: scanoss/actions-scan@chore/upgrade-scanoss-py-version-to-latest
         with:
           policies: copyleft, undeclared
-          dependencies.enabled: false
+          dependencies.enabled: true
           licenses.copyleft.include: MIT
           api.key: fD4P8wbfWS9XHvsrzcDrB0zu
