--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@chore/upgrade-scanoss-py-version-to-latest
+        uses: scanoss/actions-scan@update-MLB-GHA
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
