--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -34,3 +34,4 @@ jobs:
           dependencies.enabled: true
           licenses.copyleft.include: MIT
           api.key: fD4P8wbfWS9XHvsrzcDrB0zu
+          debug: true
