--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@chore/update-runtime-container-to-1.25.2
+        uses: scanoss/actions-scan@v0.3.5
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
