--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@v0.3.5
+        uses: scanoss/actions-scan@prevent-error-with-empty-licenses
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
