--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run SCANOSS analysis
         id: scan
-        uses: scanoss/actions-scan@bug/GHA-MLB-bug-runtime-container
+        uses: scanoss/actions-scan@v0.4.0
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
