Add API URL and key to scanoss workflow

--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -32,3 +32,5 @@ jobs:
         with:
           policies: copyleft, undeclared
           dependencies.enabled: true
+          api.url: "https://api.scanoss.com/scan/direct"
+          api.key: ${{ secrets.SCANOSS_API_KEY }}
